Add avatar upload and tab slider animation
